k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: chatapp
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: tejas164/chat-app:latest
          ports:
            - containerPort: 5001
