k8s/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: chatapp
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: tejas164/chatapp-frontend:latest
          ports:
            - containerPort: 80
