k8s/mongo-db-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo-db-deployment
  namespace: chatapp
  labels:
    app: mongo-db 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo-db
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-db-storage
              mountPath: /data/db 
      volumes:
        - name: mongo-db-storage
          persistentVolumeClaim:
            claimName: mongodb-pv-claim
