k8s/backend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: chatapp
  labels:
    app: backend
spec:
  selector:
    app: backend  
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
