k8s/frontend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
  namespace: chatapp
  labels:
    app: frontend
spec:
  selector:
    app: frontend 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
