k8s/mongo-db-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo-db-svc
  namespace: chatapp
  labels:
    app: mongo-db
spec:
  selector:
    app: mongo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
